Made changes regardig to pr comments
