# src/swagger.yaml
@@ -9,105 +9,11 @@ schemes:
   - http
   - https
 paths:
-  '/org/{org_name}/sensors':
-<<<<<<< HEAD
-=======
-    get:
-      tags:
-        - List all sensors for a specific organization (list all status by default)
-      summary: List sensors for a specific organization
-      x-swagger-router-controller: controllers.sensor_info_controller
-      operationId: get_all_sensors_org
-      produces:
-        - application/json
-
-      parameters:
-        - in: path
-          name: org_name
-          required: true
-          type: string
-          description: The name of the orgnization owning the machine
-<<<<<<< HEAD
-
-      responses:
-        '200':
-          description: Successful operation
-          schema:
-            $ref: '#/definitions/SensorList'
-          headers:
-            Access-Control-Allow-Origin:
-              type: string
-        '400':
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/BadRequestException'
-        '404':
-          description: Not Found
-          schema:
-            $ref: '#/definitions/Exception'
-        '500':
-          description: Server Error
-          schema:
-            $ref: '#/definitions/Exception'
-  '/org/{org_name}/machine/{machine_name}/sensors':
->>>>>>> modified swagger file
-    get:
-      tags:
-        - List all sensors for a specific organization (list all status by default)
-      summary: List sensors for a specific organization
-      x-swagger-router-controller: controllers.sensor_info_controller
-<<<<<<< HEAD
-      operationId: get_all_sensors_org
-=======
-      operationId: get_all_sensors_machine
->>>>>>> modified swagger file
-      produces:
-        - application/json
-
-      parameters:
-        - in: path
-          name: org_name
-          required: true
-          type: string
-          description: The name of the orgnization owning the machine
-=======
->>>>>>> Implemented API endpoint
-        - in: query
-          name: status
-          enum:
-            - ONLINE
-            - DECOMMISSIONED
-            - OFFLINE
-            - ALL
-          required: false
-          type: string
-          description: The status of sensors to include in the response
-      responses:
-        '200':
-          description: Successful operation
-          schema:
-            $ref: '#/definitions/SensorList'
-          headers:
-            Access-Control-Allow-Origin:
-              type: string
-        '400':
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/BadRequestException'
-        '404':
-          description: Not Found
-          schema:
-            $ref: '#/definitions/Exception'
-        '500':
-          description: Server Error
-          schema:
-            $ref: '#/definitions/Exception'
-
   '/org/{org_name}/machine/{machine_name}/sensors':
     get:
       tags:
-        - List all sensors on a specific machine (list all status by default)
-      summary: List sensors on a specific machine
+        - List all sensors (list all status by default)
+      summary: List all sensors
       x-swagger-router-controller: controllers.sensor_info_controller
       operationId: get_all_sensors_machine
       produces:
@@ -124,6 +30,43 @@ paths:
           required: true
           type: string
           description: The name of the machine
+
+      responses:
+        '200':
+          description: Successful operation
+          schema:
+            $ref: '#/definitions/SensorList'
+          headers:
+            Access-Control-Allow-Origin:
+              type: string
+        '400':
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/BadRequestException'
+        '404':
+          description: Not Found
+          schema:
+            $ref: '#/definitions/Exception'
+        '500':
+          description: Server Error
+          schema:
+            $ref: '#/definitions/Exception'
+
+  '/org/{org_name}/sensors':
+    get:
+      tags:
+        - List all sensors (list all status by default)
+      summary: List all sensors
+      x-swagger-router-controller: controllers.sensor_info_controller
+      operationId: get_all_sensors
+      produces:
+        - application/json
+      parameters:
+        - in: path
+          name: org_name
+          required: true
+          type: string
+          description: The name of the orgnization owning the machine
         - in: query
           name: status
           enum:
@@ -155,7 +98,7 @@ paths:
           description: Server Error
           schema:
             $ref: '#/definitions/Exception'
-            
+
   '/org/{org_name}/machine/{machine_name}/sensors/{sensor_id}':
     get:
       tags:
@@ -231,16 +174,16 @@ definitions:
     description: Details of a sensor
     allOf: [$ref: '#/definitions/SensorSummary']
     properties:
-      location:
+      name:
         type: string
-        description: Location info of the sensor
-      installDate:
+        description: Name of the sensor
+      id:
         type: string
-        description: Installation date
+        description: Sensor id
       machineInfo:
         description: The machine which this sensor is installed on
         allOf: [$ref: '#/definitions/MachineSummary']
-
+  
   MachineSummary:
     type: object
     properties:
@@ -290,4 +233,3 @@ definitions:
     required:
       - message
       - errorCode
-
